--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.trabalhojsonaula">
+    package="com.example.trabalhojsonaula" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TrabalhoJsonAula">
+        android:theme="@style/Theme.TrabalhoJsonAula" >
+        <activity
+            android:name=".StarActivity"
+            android:exported="true" />
         <activity
             android:name=".PhotosActivity"
             android:exported="true" />
@@ -31,7 +34,7 @@
             android:exported="true" />
         <activity
             android:name=".TelaInicio"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
